--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -6,6 +6,7 @@
     <title>projects</title>
 
     <link href="../css/projects.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
