--- a/myProjects/css framework/index.html
+++ b/myProjects/css framework/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Dashboard</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="stylesheet" href="../css%20framework/assets/boostrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css%20framework/assets/css/dashboard.css">
+    <link href="../css%20framework/assets/boostrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css%20framework/assets/css/dashboard.css" rel="stylesheet">
 
 
 </head>
@@ -13,31 +13,62 @@
 <nav class="navbar navbar-expand-lg bg-opacity-50 bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
-            <img src="assets/img/shop-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            Stores
+            <img alt="" class="d-inline-block align-top" height="30" src="assets/img/shop-icon.png" width="30">
+            <span class="text-warning">Lakshan</span> Stores
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+                data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto " >
-                    <li class="nav-item ">
-                        <a class="nav-link active text-white " aria-current="page" href="#" >Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Customer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Item</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Order</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto ">
+                <li class="nav-item ">
+                    <a aria-current="page" class="nav-link active text-white " href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a aria-current="page" class="nav-link active text-white" href="#">Customer</a>
+                </li>
+                <li class="nav-item">
+                    <a aria-current="page" class="nav-link active text-white" href="#">Item</a>
+                </li>
+                <li class="nav-item">
+                    <a aria-current="page" class="nav-link active text-white" href="#">Order</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
+<main class="container-fluid">
+    <section class="row mt-5">
+            <div class="card col-12 col-lg-4" >
+                <img src="assets/img/customer.jpg " height="407px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Customers</h5>
+                    <p class="card-text">50 000+ Customers</p>
+                    <a href="#" class="btn btn-warning">Customer</a>
+                </div>
+            </div>
+        <div class="card col-12  col-lg-4 " >
+            <img src="assets/img/items.png" height="407px"  class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Items</h5>
+                <p class="card-text">1000+ Items</p>
+                <a href="#" class="btn btn-warning">Item</a>
+            </div>
+        </div>
+        <div class="card col-12  col-lg-4" >
+            <img src="assets/img/order.jpg" height="401px" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Order</h5>
+                <p class="card-text">20 000+ Orders</p>
+                <a href="#" class="btn btn-warning">Order</a>
+            </div>
+        </div>
+    </section>
+
+</main>
+
 
 <script src="assets/boostrap/js/bootstrap.bundle.min.js"></script>
 </body>
