--- a/myProjects/css framework/index.html
+++ b/myProjects/css framework/index.html
@@ -72,19 +72,19 @@
         <div class="ms-2 col-12 col-lg-4">
             <div class="mb-3 ">
                 <label for="formGroupExampleInput" class="form-label">Customer ID</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your ID">
             </div>
             <div class="mb-3">
                 <label for="formGroupExampleInput2" class="form-label">Customer Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Your Name">
             </div>
             <div class="mb-3 ">
                 <label for="formGroupExampleInput3" class="form-label">Customer Address</label>
-                <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Another input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Your Address">
             </div>
             <div class="mb-3">
                 <label for="formGroupExampleInput4" class="form-label">Customer Salary</label>
-                <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="Another input placeholder">
+                <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="Your Salary">
             </div>
 
             <div class="btn-group mt-2 mb-5 ms-lg-2" role="group" aria-label="Basic mixed styles example">
@@ -104,6 +104,69 @@
                     <th class="table-warning" scope="col">Customer Name</th>
                     <th class="table-warning" scope="col">Customer Address</th>
                     <th class="table-warning" scope="col">Customer Salary</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+
+    <section class=" row mt-5 pt-5 ">
+        <h2 class="mb-3">Item Registration</h2>
+        <div class="ms-2 col-12 col-lg-4">
+            <div class="mb-3 ">
+                <label for="formGroupExampleInput0" class="form-label">Item Code</label>
+                <input type="text" class="form-control" id="formGroupExampleInput0" placeholder="Code">
+            </div>
+            <div class="mb-3">
+                <label for="formGroupExampleInputA" class="form-label">Item Name</label>
+                <input type="text" class="form-control" id="formGroupExampleInputA" placeholder="Name">
+            </div>
+            <div class="mb-3 ">
+                <label for="formGroupExampleInputB" class="form-label">Item Qty</label>
+                <input type="text" class="form-control" id="formGroupExampleInputB" placeholder="Qty">
+            </div>
+            <div class="mb-3">
+                <label for="formGroupExampleInputC" class="form-label">Unit Price</label>
+                <input type="text" class="form-control" id="formGroupExampleInputC" placeholder="Unit Price">
+            </div>
+
+            <div class="btn-group mt-2 mb-5 ms-lg-2" role="group" aria-label="Basic mixed styles example">
+                <button type="button" class="btn btn-primary">Save Customer</button>
+                <button type="button" class="btn btn-danger">Remove</button>
+                <button type="button" class="btn btn-warning">Update</button>
+                <button type="button" class="btn btn-success">Get All</button>
+                <button type="button" class="btn btn-danger">Clear All</button>
+            </div>
+        </div>
+
+        <div class="ms-lg-5 col-12 col-lg-7">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th class="table-warning" scope="col">Item Code</th>
+                    <th class="table-warning" scope="col">Item Name</th>
+                    <th class="table-warning" scope="col">Item Qty</th>
+                    <th class="table-warning" scope="col">Unit Price</th>
                 </tr>
                 </thead>
                 <tbody>
