--- a/myProjects/css framework/index.html
+++ b/myProjects/css framework/index.html
@@ -16,7 +16,8 @@
             <img alt="" class="d-inline-block align-top" height="30" src="assets/img/shop-icon.png" width="30">
             <span class="text-warning">Lakshan</span> Stores
         </a>
-        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+        <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler"
                 data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,28 +42,28 @@
 </nav>
 <main class="container-fluid">
     <section class="row mt-5 pt-5">
-            <div class="card col-12 col-lg-4" >
-                <img src="assets/img/customer.jpg " height="407px" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Customers</h5>
-                    <p class="card-text">50 000+ Customers</p>
-                    <a href="#" class="btn btn-warning">Customer</a>
-                </div>
+        <div class="card col-12 col-lg-4">
+            <img alt="..." class="card-img-top" height="407px" src="assets/img/customer.jpg ">
+            <div class="card-body">
+                <h5 class="card-title">Customers</h5>
+                <p class="card-text">50 000+ Customers</p>
+                <a class="btn btn-warning" href="#">Customer</a>
             </div>
-        <div class="card col-12  col-lg-4 " >
-            <img src="assets/img/items.png" height="407px"  class="card-img-top" alt="...">
+        </div>
+        <div class="card col-12  col-lg-4 ">
+            <img alt="..." class="card-img-top" height="407px" src="assets/img/items.png">
             <div class="card-body">
                 <h5 class="card-title">Items</h5>
                 <p class="card-text">1000+ Items</p>
-                <a href="#" class="btn btn-warning">Item</a>
+                <a class="btn btn-warning" href="#">Item</a>
             </div>
         </div>
-        <div class="card col-12  col-lg-4" >
-            <img src="assets/img/order.jpg" height="401px" class="card-img-top" alt="...">
+        <div class="card col-12  col-lg-4">
+            <img alt="..." class="card-img-top" height="401px" src="assets/img/order.jpg">
             <div class="card-body">
                 <h5 class="card-title">Order</h5>
                 <p class="card-text">20 000+ Orders</p>
-                <a href="#" class="btn btn-warning">Order</a>
+                <a class="btn btn-warning" href="#">Order</a>
             </div>
         </div>
     </section>
@@ -71,28 +72,28 @@
         <h2 class="mb-3">Customer Registration</h2>
         <div class="ms-2 col-12 col-lg-4">
             <div class="mb-3 ">
-                <label for="formGroupExampleInput" class="form-label">Customer ID</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your ID">
+                <label class="form-label" for="formGroupExampleInput">Customer ID</label>
+                <input class="form-control" id="formGroupExampleInput" placeholder="Your ID" type="text">
             </div>
             <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Customer Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Your Name">
+                <label class="form-label" for="formGroupExampleInput2">Customer Name</label>
+                <input class="form-control" id="formGroupExampleInput2" placeholder="Your Name" type="text">
             </div>
             <div class="mb-3 ">
-                <label for="formGroupExampleInput3" class="form-label">Customer Address</label>
-                <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Your Address">
+                <label class="form-label" for="formGroupExampleInput3">Customer Address</label>
+                <input class="form-control" id="formGroupExampleInput3" placeholder="Your Address" type="text">
             </div>
             <div class="mb-3">
-                <label for="formGroupExampleInput4" class="form-label">Customer Salary</label>
-                <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="Your Salary">
+                <label class="form-label" for="formGroupExampleInput4">Customer Salary</label>
+                <input class="form-control" id="formGroupExampleInput4" placeholder="Your Salary" type="text">
             </div>
 
-            <div class="btn-group mt-2 mb-5 ms-lg-2" role="group" aria-label="Basic mixed styles example">
-                <button type="button" class="btn btn-primary">Save Customer</button>
-                <button type="button" class="btn btn-danger">Remove</button>
-                <button type="button" class="btn btn-warning">Update</button>
-                <button type="button" class="btn btn-success">Get All</button>
-                <button type="button" class="btn btn-danger">Clear All</button>
+            <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
+                <button class="btn btn-primary" type="button">Save Customer</button>
+                <button class="btn btn-danger" type="button">Remove</button>
+                <button class="btn btn-warning" type="button">Update</button>
+                <button class="btn btn-success" type="button">Get All</button>
+                <button class="btn btn-danger" type="button">Clear All</button>
             </div>
         </div>
 
@@ -134,28 +135,28 @@
         <h2 class="mb-3">Item Registration</h2>
         <div class="ms-2 col-12 col-lg-4">
             <div class="mb-3 ">
-                <label for="formGroupExampleInput0" class="form-label">Item Code</label>
-                <input type="text" class="form-control" id="formGroupExampleInput0" placeholder="Code">
+                <label class="form-label" for="formGroupExampleInput0">Item Code</label>
+                <input class="form-control" id="formGroupExampleInput0" placeholder="Code" type="text">
             </div>
             <div class="mb-3">
-                <label for="formGroupExampleInputA" class="form-label">Item Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInputA" placeholder="Name">
+                <label class="form-label" for="formGroupExampleInputA">Item Name</label>
+                <input class="form-control" id="formGroupExampleInputA" placeholder="Name" type="text">
             </div>
             <div class="mb-3 ">
-                <label for="formGroupExampleInputB" class="form-label">Item Qty</label>
-                <input type="text" class="form-control" id="formGroupExampleInputB" placeholder="Qty">
+                <label class="form-label" for="formGroupExampleInputB">Item Qty</label>
+                <input class="form-control" id="formGroupExampleInputB" placeholder="Qty" type="text">
             </div>
             <div class="mb-3">
-                <label for="formGroupExampleInputC" class="form-label">Unit Price</label>
-                <input type="text" class="form-control" id="formGroupExampleInputC" placeholder="Unit Price">
+                <label class="form-label" for="formGroupExampleInputC">Unit Price</label>
+                <input class="form-control" id="formGroupExampleInputC" placeholder="Unit Price" type="text">
             </div>
 
-            <div class="btn-group mt-2 mb-5 ms-lg-2" role="group" aria-label="Basic mixed styles example">
-                <button type="button" class="btn btn-primary">Save Customer</button>
-                <button type="button" class="btn btn-danger">Remove</button>
-                <button type="button" class="btn btn-warning">Update</button>
-                <button type="button" class="btn btn-success">Get All</button>
-                <button type="button" class="btn btn-danger">Clear All</button>
+            <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
+                <button class="btn btn-primary" type="button">Save Customer</button>
+                <button class="btn btn-danger" type="button">Remove</button>
+                <button class="btn btn-warning" type="button">Update</button>
+                <button class="btn btn-success" type="button">Get All</button>
+                <button class="btn btn-danger" type="button">Clear All</button>
             </div>
         </div>
 
@@ -189,18 +190,164 @@
                 </tr>
                 </tbody>
             </table>
+        </div>
+    </section>
 
 
+    <section>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-5 pt-5 mb-5 pb-5">
+
+            <div class="col">
+                <div class="card h-100">
+                    <div class="modal-header justify-content-center bg-warning">
+                        <h4 class="modal-title fw-bold">Invoice Details</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <label class="form-label fw-bold" for="oId">Order ID:</label>
+                                <input class="form-control" id="oId" placeholder="ID" type="text">
+                            </div>
+                            <div class="col">
+                                <label class="form-label fw-bold" for="iDate">Date:</label>
+                                <input class="form-control" id="iDate" type="date">
+                            </div>
+                        </div>
+
+                        <div class="row mt-3">
+                            <div class="col">
+                                <label class="form-label fw-bold" for="idCmb1">Customer ID:</label>
+                                <select class="form-select" id="idCmb1">
+                                    <option selected>C001</option>
+                                    <option value="1">C001</option>
+                                    <option value="2">C002</option>
+                                    <option value="3">C003</option>
+                                </select>
+                            </div>
+                            <div class="col">
+                                <label class="form-label fw-bold" for="cusName">Customer Name:</label>
+                                <input class="form-control" id="cusName" placeholder="Name" type="text">
+                            </div>
+                        </div>
+
+                        <div class="row mt-3 mb-3">
+                            <div class="col">
+                                <label class="form-label fw-bold" for="salary">Salary:</label>
+                                <input class="form-control" id="salary" placeholder="Salary" type="number">
+                            </div>
+                            <div class="col">
+                                <label class="form-label fw-bold" for="address">Address:</label>
+                                <input class="form-control" id="address" placeholder="Address" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col">
+                <div class="card h-100">
+                    <div class="modal-header justify-content-center bg-warning">
+                        <h4 class="modal-title fw-bold">Item Select</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <label class="form-label fw-bold" for="idCmb">Item:</label>
+                                <select class="form-select" id="idCmb">
+                                    <option selected>I001</option>
+                                    <option value="1">I001</option>
+                                    <option value="2">I002</option>
+                                    <option value="3">I003</option>
+                                </select>
+                            </div>
+                            <div class="col">
+                                <label class="form-label fw-bold" for="itemName">Item Name:</label>
+                                <input class="form-control" id="itemName" placeholder="Mouse" type="text">
+                            </div>
+                        </div>
+
+                        <div class="row mt-3">
+
+                            <div class="col">
+                                <label class="form-label fw-bold" for="qtyOnHand">Qty On Hand:</label>
+                                <input class="form-control" id="qtyOnHand" placeholder="100" type="number">
+                            </div>
+                            <div class="col">
+                                <label class="form-label fw-bold" for="price">Price:</label>
+                                <input class="form-control" id="price" placeholder="2000" type="text">
+                            </div>
+                        </div>
+
+                        <div class="row mt-3">
+                            <div class="col">
+                                <label class="form-label fw-bold" for="oQty">Order Quantity:</label>
+                                <input class="form-control" id="oQty" placeholder="1" type="number">
+                            </div>
+                        </div>
+                        <div class="row mt-3 mb-1">
+                            <button class="btn btn-success" type="button">ADD</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <div class="row mt-3">
+                                    <div class="col">
+                                        <p class="h2 d-inline">
+                                            Total :
+                                        </p>
+                                        <p class="h2 d-inline">
+                                            0.00 LKR
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row mt-3">
+                                    <div class="col">
+                                        <p class="h2 d-inline">
+                                            SubTotal :
+                                        </p>
+                                        <p class="h2 d-inline">
+                                            0.00 LKR
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="row mt-3">
+
+                                    <div class="col">
+                                        <label class="form-label fw-bold" for="cash">Cash:</label>
+                                        <input class="form-control" id="cash" placeholder="0.00" type="text">
+                                    </div>
+                                    <div class="col">
+                                        <label class="form-label fw-bold" for="dis">Discount:</label>
+                                        <input class="form-control" id="dis" placeholder="%" type="number">
+                                    </div>
+                                </div>
+                                <div class="row mt-3">
+
+                                    <div class="col">
+                                        <label class="form-label fw-bold" for="cash">Balance:</label>
+                                        <input class="form-control" placeholder="0.00" type="text">
+                                    </div>
+                                </div>
+                                <div class="row mt-4 pt-1 mb-1 ">
+                                    <button class="btn btn-success" type="button">Purchase</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
     </section>
-
-
-
-
-
-
 
 
 </main>
