--- a/myProjects/js/SPA POS/index.html
+++ b/myProjects/js/SPA POS/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Dashboard</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="../css%20framework/assets/boostrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css%20framework/assets/css/dashboard.css" rel="stylesheet">
+    <link href="../SPA%20POS/assets/boostrap/css/bootstrap.min.css" rel="stylesheet">
+
 
 
 </head>
 <body>
+ <!--------------------------NavBar------------------------------->
 <nav class="navbar navbar-expand-lg bg-opacity-50 bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
@@ -28,19 +29,21 @@
                     <a aria-current="page" class="nav-link active text-white " href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="assets/pages/customer.html">Customer</a>
+                    <a aria-current="page" class="nav-link active text-white" href="#">Customer</a>
                 </li>
                 <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="assets/pages/item.html">Item</a>
+                    <a aria-current="page" class="nav-link active text-white" href="#">Item</a>
                 </li>
                 <li class="nav-item">
-                    <a aria-current="page" class="nav-link active text-white" href="assets/pages/order.html">Order</a>
+                    <a aria-current="page" class="nav-link active text-white" href="#">Order</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
 <main class="container-fluid">
+    <!--------------------------MainPage------------------------------->
     <section class="row mt-5 pt-5">
         <div class="card col-12 col-lg-4">
             <img alt="..." class="card-img-top" height="407px" src="assets/img/customer.jpg ">
@@ -68,10 +71,72 @@
         </div>
     </section>
 
+    <!--------------------------CustomerPage------------------------------->
+    <section class=" row mt-5 pt-5 ">
+        <h2 class="mb-3">Customer Registration</h2>
+        <div class="ms-2 col-12 col-lg-4">
+            <div class="mb-3 ">
+                <label class="form-label" for="formGroupExampleInput">Customer ID</label>
+                <input class="form-control" id="formGroupExampleInput" placeholder="Your ID" type="text">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="formGroupExampleInput2">Customer Name</label>
+                <input class="form-control" id="formGroupExampleInput2" placeholder="Your Name" type="text">
+            </div>
+            <div class="mb-3 ">
+                <label class="form-label" for="formGroupExampleInput3">Customer Address</label>
+                <input class="form-control" id="formGroupExampleInput3" placeholder="Your Address" type="text">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="formGroupExampleInput4">Customer Salary</label>
+                <input class="form-control" id="formGroupExampleInput4" placeholder="Your Salary" type="text">
+            </div>
+
+            <div aria-label="Basic mixed styles example" class="btn-group mt-2 mb-5 ms-lg-2" role="group">
+                <button class="btn btn-primary" type="button">Save Customer</button>
+                <button class="btn btn-danger" type="button">Remove</button>
+                <button class="btn btn-warning" type="button">Update</button>
+                <button class="btn btn-success" type="button">Get All</button>
+                <button class="btn btn-danger" type="button">Clear All</button>
+            </div>
+        </div>
+
+        <div class="ms-lg-5 col-12 col-lg-7">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th class="table-warning" scope="col">Customer ID</th>
+                    <th class="table-warning" scope="col">Customer Name</th>
+                    <th class="table-warning" scope="col">Customer Address</th>
+                    <th class="table-warning" scope="col">Customer Salary</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
 
-
-   <!-- <section class=" row mt-5 pt-5 ">
+    <!--------------------------ItemPage------------------------------->
+    <section class=" row mt-5 pt-5 ">
         <h2 class="mb-3">Item Registration</h2>
         <div class="ms-2 col-12 col-lg-4">
             <div class="mb-3 ">
@@ -133,7 +198,7 @@
         </div>
     </section>
 
-
+    <!--------------------------OrderPage------------------------------->
     <section>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-5 pt-5 mb-5 pb-5">
 
@@ -287,12 +352,12 @@
         </div>
 
 
-    </section>-->
+    </section>
 
 
 </main>
 
 
-<script src="assets/boostrap/js/bootstrap.bundle.min.js"></script>
+<script src="../SPA%20POS/assets/boostrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
