--- a/myProjects/css framework/assets/pages/item.html
+++ b/myProjects/css framework/assets/pages/item.html
@@ -33,8 +33,13 @@
             <button class="btn btn-primary" type="button">Save Item</button>
             <button class="btn btn-danger" type="button">Remove</button>
             <button class="btn btn-warning" type="button">Update</button>
-            <button class="btn btn-success" type="button">Get All</button>
-            <button class="btn btn-danger" type="button">Clear All</button>
+            <button class="btn btn-secondary" type="button">Clear All</button>
+        </div>
+        <div class="mb-3 ">
+            <label class="form-label" for="txtItemSearch">Search Item</label>
+            <input aria-describedby="textHelp" class="form-control" id="txtItemSearch" type="text">
+
+            <button class="btn btn-success mt-2" type="button">Search</button>
         </div>
     </div>
 
