modified item form

--- a/myProjects/js/SPA POS/index.html
+++ b/myProjects/js/SPA POS/index.html
@@ -138,8 +138,8 @@
             <h2 class="mb-3">Item Registration</h2>
             <div class="ms-2 col-12 col-lg-4">
                 <div class="mb-3 ">
-                    <label class="form-label" for="txtItemID">Item Code</label>
-                    <input class="form-control" id="txtItemID" placeholder="Code" type="text">
+                    <label class="form-label" for="txtItemCode">Item Code</label>
+                    <input class="form-control" id="txtItemCode" placeholder="Code" type="text">
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="txtItemName">Item Name</label>
@@ -350,7 +350,7 @@
 <script src="assets/JQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/db/DB.js"></script>
 <script src="assets/js/controller/DashboardController.js"></script>
-<script src="assets/js/controller/customerController.js"></script>
+<script src="assets/js/controller/CustomerController.js"></script>
 <script src="assets/js/controller/itemController.js"></script>
 <script src="assets/js/model/CustomerDTO.js"></script>
 <script src="assets/js/model/ItemDTO.js"></script>
