update myProfile projects

--- a/assets/pages/aboutMe.html
+++ b/assets/pages/aboutMe.html
@@ -24,7 +24,7 @@
       I have been studying in software engineering at IJSE Panadura <br>
       I'm very passionate and dedicated to my work
     </p>
-    <button id="download-cv-button"><b><a href="../../assets/cv/DimuthuLakshan.jpg" style="text-decoration: none;color: white">Download Resume</a></b></button>
+    <button id="download-cv-button"><b><a href="../../assets/cv/DimuthuLakshan.jpg" download="" style="text-decoration: none;color: white">Download Resume</a></b></button>
 
   </div>
 
