--- a/assets/pages/projects.html
+++ b/assets/pages/projects.html
@@ -17,50 +17,217 @@
 
 </head>
 <body>
-
-<div class="contact-header">
+<main class="container">
     <h2>Projects</h2>
     <hr class="line">
-    <p>Most recent works</p>
-</div>
+    <p>
+       Most Recent Works
+    </p>
+
+    <!---------------card 1-------------->
+    <section class="box-container">
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/layoutDesign.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 1</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Layouts Case 1</p>
+                <button class="btn"><a href="../../myProjects/css/layouts/case%201">See More..</a></button>
+            </div>
+
+        </div>
+        <!---------------card 2-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/webLayout.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 2</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Layouts Case 2</p>
+                <button class="btn"><a href="../../myProjects/css/layouts/case%202">See More..</a></button>
+            </div>
+
+        </div>
 
 
-<div class="container">
+        <!---------------card 3-------------->
+        <div class="cards">
 
-    <input type="radio" name="image" id="i1" checked>
-    <input type="radio" name="image" id="i2">
-    <input type="radio" name="image" id="i3">
+            <div class="image">
+                <img src="../gif/fixed.gif" alt="" height="150px">
+            </div>
 
-    <div class="slide-img" id="one">
-        <img src="../images/img1.png" alt="">
+            <div class="title">
+                <h1>Case 3</h1>
+            </div>
 
-        <label for="i3" class="pre"></label>
-        <label for="i2" class="nxt"></label>
+            <div class="des">
+                <p>Css Layouts Case 3</p>
+                <button class="btn"><a href="../../myProjects/css/layouts/case%203">See More..</a></button>
+            </div>
 
-    </div>
-    <div class="slide-img" id="two">
-        <img src="../images/img2.png" alt="">
-
-        <label for="i1" class="pre"></label>
-        <label for="i3" class="nxt"></label>
-
-    </div>
-    <div class="slide-img" id="three">
-        <img src="../images/img3.png" alt="">
-
-        <label for="i2" class="pre"></label>
-        <label for="i1" class="nxt"></label>
-
-    </div>
-
-    <div class="nav">
-        <label for="i1" class="dots" id="dot1"></label>
-        <label for="i2" class="dots" id="dot2"></label>
-        <label for="i3" class="dots" id="dot3"></label>
+        </div>
 
 
-    </div>
-</div>
+        <!---------------card 4-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/position.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 4</h1>
+            </div>
+
+            <div class="des">
+                <p>Css layouts Case 4</p>
+                <button class="btn"><a href="../../myProjects/css/layouts/case%204">See More..</a></button>
+            </div>
+
+        </div>
+
+
+
+        <!---------------card 5-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/slider.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 5</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Transitions Case 1</p>
+                <button class="btn"><a href="../../myProjects/css/transitions/case%201">See More..</a></button>
+            </div>
+
+        </div>
+
+
+        <!---------------card 6-------------->
+
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/cricleRound.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 6</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Transitions Case 2</p>
+                <button class="btn"><a href="../../myProjects/css/transitions/case%202">See More..</a></button>
+            </div>
+
+        </div>
+
+
+
+        <!---------------card 7-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/keyFarme.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 7</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Animation Case 1</p>
+                <button class="btn"><a href="../../myProjects/css/animation/case%201">See More..</a></button>
+            </div>
+
+        </div>
+
+
+
+
+
+
+        <!---------------card 8-------------->
+
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/slider.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 8</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Animation Case 2</p>
+                <button class="btn"><a href="../../myProjects/css/animation/case%202">See More..</a></button>
+            </div>
+
+        </div>
+
+
+
+        <!---------------card 9-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/waterDrop.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 9</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Animation Case 3</p>
+                <button class="btn"><a href="../../myProjects/css/animation/case%203">See More..</a></button>
+            </div>
+
+        </div>
+
+
+
+
+        <!---------------card 10-------------->
+        <div class="cards">
+
+            <div class="image">
+                <img src="../gif/Car%20Animation.gif" alt="" height="150px">
+            </div>
+
+            <div class="title">
+                <h1>Case 10</h1>
+            </div>
+
+            <div class="des">
+                <p>Css Animation Case 4</p>
+                <button class="btn"><a href="../../myProjects/css/animation/case%204">See More..</a></button>
+            </div>
+
+        </div>
+
+
+    </section>
+
+</main>
+
 
 </body>
 </html>
