cal ui is finished

--- a/myProjects/js/Calculator/index.html
+++ b/myProjects/js/Calculator/index.html
@@ -2,9 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Calculator</title>
+    <link href="../../js/Calculator/assets/boostrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../js/Calculator/assets/Css/cal.css" rel="stylesheet">
+
 </head>
 <body>
+<br>
+<h1 align="center">Calculator</h1>
 
+<main class="container">
+    <div align="center">
+        <input type="text" class="form-control input-lg">
+    </div>
+    
+
+    <div align="center">
+        <button class="btn btn-light btn-num btn-lg">7</button>
+        <button class="btn btn-light btn-num btn-lg">8</button>
+        <button class="btn btn-light btn-num btn-lg">9</button>
+        <button class="btn btn-light btn-act btn-lg">&divide;</button>
+    </div>
+
+    <div align="center">
+        <button class="btn btn-light btn-num btn-lg">4</button>
+        <button class="btn btn-light btn-num btn-lg">5</button>
+        <button class="btn btn-light btn-num btn-lg">6</button>
+        <button class="btn btn-light btn-act btn-lg">&times;</button>
+    </div>
+
+    <div align="center">
+        <button class="btn btn-light btn-num btn-lg">1</button>
+        <button class="btn btn-light btn-num btn-lg">2</button>
+        <button class="btn btn-light btn-num btn-lg">3</button>
+        <button class="btn btn-light btn-act btn-lg">-</button>
+    </div>
+
+    <div align="center">
+        <button class="btn btn-warning btn-act btn-lg">CLEAR</button>
+        <button class="btn btn-light btn-num btn-lg">0</button>
+        <button class="btn btn-success btn-act btn-lg">=</button>
+        <button class="btn btn-light btn-act btn-lg">+</button>
+    </div>
+</main>
+
+
+
+
+<script src="../../js/Calculator/assets/boostrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../js/Calculator/assets/JQuery/jquery-3.6.1.min.js"></script>
 </body>
 </html>
