--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="intro-section">
             <div class="intro">
                 <h2 id="my-name">I am Dimuthu Lakshan</h2>
-                <p id="my-position">I am Full-Stack Developer</p>
+                <p id="my-position">I am <span data-set="Full-Stack Developer">Full-Stack Developer</span></p>
                 <button id="contact-button"><a href="assets/pages/contactMe.html" style="text-decoration: none;color: white"><b>Contact</b></a></button>
             </div>
         </section>
