--- a/assets/pages/skills.html
+++ b/assets/pages/skills.html
@@ -101,22 +101,22 @@
                     <!-----------skill-B1--------->
                     <div class="skill-data">
                         <div class="skill-titles">
-                            <h5 class="skill-name">PHP</h5>
+                            <h5 class="skill-name">Spring</h5>
                             <span class="skill-number">80%</span>
                         </div>
                         <div class="skill-bar">
-                            <span class="skill-percentage skill-php"></span>
+                            <span class="skill-percentage skill-spring"></span>
                         </div>
 
                     </div>
                     <!-----------skill-B2--------->
                     <div class="skill-data">
                         <div class="skill-titles">
-                            <h5 class="skill-name">Node Js</h5>
-                            <span class="skill-number">70%</span>
+                            <h5 class="skill-name">SpringBoot</h5>
+                            <span class="skill-number">88%</span>
                         </div>
                         <div class="skill-bar">
-                            <span class="skill-percentage skill-node"></span>
+                            <span class="skill-percentage skill-springboot"></span>
                         </div>
 
                     </div>
@@ -136,11 +136,11 @@
                     <!-----------skill-B4--------->
                     <div class="skill-data">
                         <div class="skill-titles">
-                            <h5 class="skill-name">Python</h5>
+                            <h5 class="skill-name">NodeJs</h5>
                             <span class="skill-number">65%</span>
                         </div>
                         <div class="skill-bar">
-                            <span class="skill-percentage skill-python"></span>
+                            <span class="skill-percentage skill-node"></span>
                         </div>
 
                     </div>
